--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,21 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
+
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+main {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  margin: auto;
+  width:90%;
+  background-color: floralwhite
+
+}
