--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -1,4 +1,4 @@
-.all-tweet{
+#all-tweets{
   display: flex;
   flex-direction: column;
   align-items:center;
@@ -36,7 +36,7 @@ article.tweet p{
   width: 680px;
   padding-left: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size:20px;
+  font-size:22px;
   border-bottom: 5px solid grey;
 }
 
@@ -46,8 +46,21 @@ article.tweet footer{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size:20px;
+  margin-bottom: 5px;
 }
 
 .icons i:hover{
   color:coral;
+}
+
+.userData{
+margin-top: 15px;
+display: flex;
+flex-direction: row;
+align-items: center;
+}
+
+.userData div{
+  margin-left: 5px;
 }
