--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,17 @@
 .new-tweet{
   display:flex;
-  justify-content:center
+  flex-direction: column;
+  align-items:center
+}
+
+#error-message{
+color: red;
+border: 5px solid red;
+width: 700px;
+height:70px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .new-tweet textarea{
