tweeter responsive design

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,7 +6,9 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -17,11 +19,9 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
-  font-size: 24px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.5rem;
+  font-family: "Source Sans Pro", sans-serif;
 }
-
-
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
@@ -29,10 +29,29 @@ body {
 
 main {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: center;
   margin: auto;
-  width:90%;
-  background-color: floralwhite
+  width: 90%;
+  background-color: floralwhite;
+}
 
+@media only screen and (min-width: 1024px) {
+  #content {
+    margin-top: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  #content #top-page {
+    margin-top: 0;
+    margin-left: 2%;
+    width: 30%;
+  }
+
+  #content main {
+    width: 60%;
+  }
 }
