--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -10,7 +10,7 @@ article.tweet{
   flex-direction: column;
   align-items: center;
   height:250px;
-  width: 720px;
+  width: 90%;
   border: 5px solid grey;
   background-color: floralwhite;
   margin: 50px
@@ -33,7 +33,7 @@ article.tweet p{
   align-items: center;
   padding:auto;
   height:40%;
-  width: 680px;
+  width: 90%;
   padding-left: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-size:22px;
