--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,8 +8,8 @@
 margin-top: 20px;
 color: red;
 border: 5px solid red;
-width: 700px;
-height:70px;
+width: 65vw;
+height:65px;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -23,18 +23,25 @@ animation: slide ease-in 0.5s;
 }
 
 #error-message p {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+#post-tweet{
+width:100%;
+display:flex;
+flex-direction: column;
+align-items:center
+
 }
 
 .new-tweet textarea{
-  
   height:80px;
-  width: 700px;
+  width: 80%;
   border: 0;
   border-bottom: 5px solid grey;
   background-color: floralwhite;
-  font-size:25px;
+  font-size:1.5rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 20px;
@@ -43,14 +50,14 @@ animation: slide ease-in 0.5s;
   
 }
 
-.new-tweet div{
+.new-tweet #footer{
   display:flex;
   justify-content: space-between;
-  width: 700px;
+  width: 80%;
   margin-bottom: 30px;
 }
 
-.new-tweet div button{
+.new-tweet #footer button{
   height:40px;
   width:120px;
   border:0;
@@ -59,6 +66,6 @@ animation: slide ease-in 0.5s;
   font-family: "Bungee", sans-serif;
 }
 
-.new-tweet div output{
+.new-tweet #footer output{
   font-family: "Bungee", sans-serif;
 }
